test proccesing all
